@startuml class_diagram
' Police Management System - Class Diagram
' UML 2.5

skinparam defaultFontName "Arial"
skinparam fontSize 10
skinparam classAttributeIconSize 0
skinparam roundcorner 5

title Police Management System - Class Diagram

' Exceptions
class PoliceError {
    + __init__(message: str)
}
class ZoneNotFoundError {
    + __init__(message: str)
}
class PolicemanNotFoundError {
    + __init__(message: str)
}
class CitizenError {
    + __init__(message: str)
}
class LawError {
    + __init__(message: str)
}
class InvestigationError {
    + __init__(message: str)
}

PoliceError <|-- ZoneNotFoundError
PoliceError <|-- PolicemanNotFoundError

' Domain classes
class Law {
    - _article: int
    - _severity: int
    - _desc: str
    + __init__(article: int, severity: int, desc: str)
    + article: int <<property>>
    + severity: int <<property>>
    + desc: str <<property>>
}

class Citizen {
    - _name: str
    - _zone: str | None
    + __init__(name: str, zone: str | None = None)
    + name: str <<property>>
    + zone: str | None <<property>>
    + submit_application(...) : Crime
}

class Crime {
    - _description: str
    - _suspect: Citizen
    - _zone: str
    - _law: Law
    + __init__(suspect, description, zone, law)
    + severity: int <<property>>
}

class Policeman {
    - _lastname: str
    - _zone: str | int | float
    - _is_work: bool
    - _fatigue: int
    - _criminal: tuple | None
    - _is_resting: bool
    + __init__(lastname: str, zone: str, is_work: bool)
    + arrest() : bool
    + assign_crime(criminal: tuple) : None
    + recovery() : None
    + clear_assignment() : None
    + check_exhaustion() : bool
    + has_assignment: bool <<property>>
    + is_resting: bool <<property>>
    + fatigue: int <<property>>
}

class Police {
    - _zones: dict[str, dict]
    + __init__(zones: dict)
    + hire(policeman: Policeman, zone: str) : None
    + fire(policeman: Policeman) : None
    + relocate(policemen: list, zone: str) : None
    + get_policemen() : list[Policeman]
    + add_zone(zone: str) : None
    + has_zone(zone: str) : bool
    + update_zone_security(zone: str, citizen_count: int, crime_count: int) : None
    + update_all_zones_security(citizen_count: int, crimes_by_zone: dict) : None
}

class Investigation {
    - _crimes: list[Crime]
    + __init__(crimes: list[Crime])
    + investigate() : tuple[Crime, int] | None
    + investigate_all() : list[tuple[Crime, int]]
}

class Security {
    - _level: float
    + __init__(level: float)
    + level: float <<property>>
    + eval(citizens: list[Citizen], crimes: list[Crime]) : float
    + decrease(amount: float) : None
    + increase(amount: float) : None
}

' Relationships
Crime "1" *-- "1" Citizen : suspect
Crime "1" *-- "1" Law : law
Police "1" *-- "0..*" Policeman : employs
Policeman "0..*" --> "0..1" Crime : investigates
Investigation "1" --> "1..*" Crime : analyzes
Security "1" ..> "0..*" Citizen : evaluates
Security "1" ..> "0..*" Crime : evaluates
Citizen "1" ..> "0..*" Crime : reports

note right of Police
    Zone structure:
    {
        "zone_name": {
            "policemen": list[Policeman],
            "security": float
        }
    }
end note

note right of Policeman
    Fatigue states:
    - 0-2: Fresh (🟢)
    - 3-5: Tired (🟡)
    - 6+: Resting (⏸️)
end note

@enduml
